# urdf_editor

./: .gitignore  CMakeLists.txt  README.md  package.xml  plugin_description.xml
config/: logging.config  urdf_editor.rviz
include/urdf_editor/ogre_helpers/: ogre_controller.hh
include/urdf_editor/rviz_helpers/: display_context_proxy.hh  static_link_updater.hh
include/urdf_editor/ui/: add_link_dialog.hh  double_map_input_dialog.hh  update_link_dialog.hh  urdf_editor_panel.hh  widget_item.hh
include/urdf_editor/utils/: time.hh  urdf_clone.hh
include/urdf_editor/view_model/: base_view_model.hh  collision_view_model.hh  geometry_view_model.hh  inertial_view_model.hh  joint_limits_view_model.hh  joint_view_model.hh  link_view_model.hh  material_view_model.hh  urdf_view_model.hh  visual_view_model.hh
launch/: urdf_editor.launch
src/ogre_helpers/: ogre_controller.cc
src/rviz_helpers/: static_link_updater.cc
src/ui/: add_link_dialog.cc  update_link_dialog.cc  update_link_dialog_connect.cc  urdf_editor_panel.cc
src/view_model/: geometry_view_model.cc  joint_view_model.cc  link_view_model.cc  urdf_view_model.cc
ui/: add_link_dialog.ui  update_link_dialog.ui  urdf_editor_panel.ui
